[package]
name = "my_lang_start"
version = "0.1.0"
authors = ["stevenjiang <stevenjiang1110@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "my_rust_std"
crate_type = ["rlib","cdylib"]

[profile.release]
panic="abort"

[dependencies]
libc = "0.2.73"